Adding search function

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -43,13 +43,7 @@
       <div class="collapse navbar-collapse" id="topNavBar">
         <!-- left navigation -->
         <ul class="nav navbar-nav navbar-left">
-          <li>
-            <a href="" target="_blank"><button class="btn btn-info" type="button">1</button></a>
-            </a>
-          </li> 
-          <li>
-            <a href="" target="_blank"><button class="btn btn-info" type="button">2</button></a>
-          </li>
+          
         </ul>
         <!-- right navigation -->
         <ul class="nav navbar-nav navbar-right">
@@ -92,7 +86,7 @@
          <!-- Page Header -->
       <div class="row">
           <div class="col-lg-12">
-              <h1 class="page-header">All users
+              <h1 id="get-users" class="page-header">All users
               </h1>
           </div>
           <div class="col-lg-12">
